feat(Activity): Add activity creation and fix data refresh issues
- Implemented a feature to add new activities directly from the work order view. This includes a new form, API client method, and server controller endpoint.
- Fixed a bug where the activity list would not refresh after adding a new activity.
- Resolved an issue where work order data would revert to a previous state after UI interactions by correcting the component's data handling logic.
- Improved the UI/UX of the WorkOrderComponent for better layout and usability.
- Updated CHANGELOGs to reflect the new features and fixes.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -503,7 +503,7 @@
     <value>Statystyki</value>
   </data>
   <data name="WorkOrder_Actions" xml:space="preserve">
-    <value>Akcje</value>
+    <value>Aktywności</value>
   </data>
   <data name="WorkOrder_Files" xml:space="preserve">
     <value>Pliki</value>
@@ -630,5 +630,8 @@
   </data>
   <data name="WorkOrder_SelectWOReason" xml:space="preserve">
     <value>Wybierz przyczynę zlecenia...</value>
+  </data>
+  <data name="WorkOrder_AddActivity" xml:space="preserve">
+    <value>Nowa aktywność</value>
   </data>
 </root>
