--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -527,7 +527,7 @@
     <value>Pracownicy</value>
   </data>
   <data name="ActivityList_Assigned" xml:space="preserve">
-    <value>Przypisano</value>
+    <value>Przypisane</value>
   </data>
   <data name="ActivityList_Date" xml:space="preserve">
     <value>Data</value>
