feat: Implement WorkOrderIdentifier, localize Home page titles, and enhance Home page layout
Refactored the `GetWOTaken` method in `WoController` to correctly deserialize the API response into a list of `WorkOrderIdentifier` objects, addressing the issue of incorrect data type handling. This involved creating a new `WorkOrderIdentifier` class in `BlazorTool.Client.Models`.

Enhanced the `Home.razor` page by adding three `OrdersGrid` components to display "My assigned orders", "My taken orders", and "Orders for department". This provides a more comprehensive overview of work orders directly on the home page.

Additionally, implemented localization for the titles of these new sections on the `Home.razor` page by adding new entries to `UIStrings.resx` and `UIStrings.pl-PL.resx`, and updating the `Home.razor` to use these localized strings. This improves the user experience by providing multi-language support for key UI elements.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -715,4 +715,14 @@
   <data name="ActivityList_Description_Placeholder" xml:space="preserve">
     <value>Wprowadź opis</value>
   </data>
+  <data name="Home_MyAssignedOrders" xml:space="preserve">
+    <value>Moje przypisane zlecenia</value>
+  </data>
+  <data name="Home_MyTakenOrders" xml:space="preserve">
+    <value>Moje podjęte zlecenia</value>
+  </data>
+  <data name="Home_OrdersForDepartment" xml:space="preserve">
+    <value>Zlecenia dla działu</value>
+  </data>
+</root>
 </root>
