--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -717,4 +717,13 @@
   <data name="ActivityList_Description_Placeholder" xml:space="preserve">
     <value>Enter description</value>
   </data>
+  <data name="Home_MyAssignedOrders" xml:space="preserve">
+    <value>My assigned orders</value>
+  </data>
+  <data name="Home_MyTakenOrders" xml:space="preserve">
+    <value>My taken orders</value>
+  </data>
+  <data name="Home_OrdersForDepartment" xml:space="preserve">
+    <value>Orders for department</value>
+  </data>
 </root>
