add button Take on Workorder
Enhance work order management and UI improvements

- Refactored `AddActivityForm.razor` to use async initialization and added workload calculation based on `TakeDate`.
- Updated `AppointmentEditor.razor` with new buttons for taking work orders and improved initialization logic.
- Improved state management and visual representation in `WorkOrderComponent.razor`.
- Enhanced navigation UI in `NavMenu.razor` with updated icons and styles.
- Introduced `WorkOrderTakeRequest` model in `RequestsModels.cs` for encapsulating work order data.
- Updated section titles in `Home.razor` for better localization.
- Updated localized strings in `UIStrings.Designer.cs` for better internationalization.
- Implemented `TakeWorkOrderAsync` method in `ApiServiceClient.cs` for handling work order requests.
- Added `CanHaveManyActiveTake` property in `UserState.cs` to manage user permissions.
- Introduced new endpoint for taking work orders in `WoController.cs` with validation.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -503,7 +503,7 @@
     <value>Aktywności dla zlecenia:</value>
   </data>
   <data name="ActivityList_TotalWorkload" xml:space="preserve">
-    <value>Łączne obciążenie:</value>
+    <value>Całkowity czas pracy:</value>
   </data>
   <data name="ActivityList_HoursAbbreviation" xml:space="preserve">
     <value>h</value>
@@ -521,7 +521,7 @@
     <value>Opis</value>
   </data>
   <data name="ActivityList_Workload" xml:space="preserve">
-    <value>Obciążenie</value>
+    <value>Czas</value>
   </data>
   <data name="ActivityList_Workers" xml:space="preserve">
     <value>Pracownicy</value>
@@ -724,5 +724,7 @@
   <data name="Home_OrdersForDepartment" xml:space="preserve">
     <value>Zlecenia dla działu</value>
   </data>
-</root>
+  <data name="Take" xml:space="preserve">
+    <value>Weź</value>
+  </data>
 </root>
