Refactor forms and improve appointment handling
- Updated `AddActivityForm.razor` for layout and validation improvements, including changes to `CalculateDecimalHours`.
- Modified `AppointmentEditor.razor` to rename event callbacks and update button text.
- Enhanced `OrdersGrid.razor` to better manage selected orders and added a `RefreshGrid` method.
- Adjusted `WorkOrderComponent.razor` to use `WorkOrder.TakePersons` and reduced window width.
- Improved `Home.razor` for better display of orders and loading states.
- Fix localization strings for clarity in UI.
- Added a method in `AppointmentService.cs` for refreshing appointments by ID.

--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -726,7 +726,7 @@
   <data name="Home_OrdersForDepartment" xml:space="preserve">
     <value>Orders for department</value>
   </data>
-  <data name="Take" xml:space="preserve">
-    <value>Take</value>
+  <data name="TakeOrder" xml:space="preserve">
+    <value>Take order</value>
   </data>
 </root>
