--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -724,7 +724,7 @@
   <data name="Home_OrdersForDepartment" xml:space="preserve">
     <value>Zlecenia dla działu</value>
   </data>
-  <data name="Take" xml:space="preserve">
-    <value>Weź</value>
+  <data name="TakeOrder" xml:space="preserve">
+    <value>Weź zlecenie</value>
   </data>
 </root>
