Refactor activity management and improve UI feedback
- Updated `AddActivityForm.razor` to use a variable for label width, enhancing UI flexibility.
- Adjusted workload calculation logic in `OnInitializedAsync` based on user activity.
- Added a button in `AppointmentEditor.razor` for direct activity addition.
- Introduced `AddActivity` method in `WorkOrderComponent.razor` to manage activity window visibility.
- Updated localization strings for messages about taking multiple orders in `UIStrings`.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -727,4 +727,10 @@
   <data name="TakeOrder" xml:space="preserve">
     <value>Weź zlecenie</value>
   </data>
+  <data name="CanHaveManyTakenOrders" xml:space="preserve">
+    <value>Można brać kilka zamówień jednocześnie</value>
+  </data>
+  <data name="CannotHaveManyTakenOrders" xml:space="preserve">
+    <value>Nie można brać kilka zamówień jednocześnie</value>
+  </data>
 </root>
