add context menu for grids on Home page add translations for context menu implement OnRowContextMenu for components

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -736,4 +736,10 @@
   <data name="NewOrder" xml:space="preserve">
     <value>Nowe zlecenie</value>
   </data>
+  <data name="Wait_a_moment" xml:space="preserve">
+    <value>Poczekaj chwilę</value>
+  </data>
+  <data name="AssignToMyself" xml:space="preserve">
+    <value>Przypisz do mnie</value>
+  </data>
 </root>
