Enhance UI with icons and context menus
Updated various components to include icons for buttons and context menu items, improving overall UI/UX. Key changes include:
- Introduced an optional `Icon` property in `ContextMenuItem.cs`.
- Implemented a dynamic context menu in `OrdersPage.razor` with icons based on user permissions.
- Updated localized strings in `UIStrings.Designer.cs` for clarity.
- Created `IconHtmlHelper.cs` for consistent icon rendering.
- Added an icon next to the reload button in `SchedulerPage.razor`.
- Modified `app.css` to style buttons with icons.
- Added new PNG image files for various icons.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -374,7 +374,7 @@
     <value>Nie udało się zamknąć terminu.</value>
   </data>
   <data name="Scheduler_AddNew" xml:space="preserve">
-    <value>Dodaj nowe</value>
+    <value>Nowe zlecenie</value>
   </data>
   <data name="Scheduler_Open" xml:space="preserve">
     <value>Otwórz</value>
@@ -404,7 +404,7 @@
     <value>Usuń z harmonogramu</value>
   </data>
   <data name="AppointmentEditor_FinishOrder" xml:space="preserve">
-    <value>Zakończ zlecenie</value>
+    <value>Zamknij zlecenie</value>
   </data>
   <data name="AppointmentEditor_FillRequiredFields" xml:space="preserve">
     <value>Proszę wypełnić wszystkie wymagane pola.</value>
@@ -741,5 +741,11 @@
   </data>
   <data name="AssignToMyself" xml:space="preserve">
     <value>Przypisz do mnie</value>
+  </data>
+  <data name="MoveToDepartment" xml:space="preserve">
+    <value>Przenieś do innego działu</value>
+  </data>
+  <data name="Move" xml:space="preserve">
+    <value>Przenieś</value>
   </data>
 </root>
